Make profile image very small and move to header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
     <header id="header">
         <div class="container">
-            <h1><a href="#home">Arjun</a></h1>
+            <div style="display: flex; align-items: center;">
+                <h1><a href="#home">Arjun</a></h1>
+                <img src="images/IMG_5554.jpeg" alt="Arjun" class="profile-image">
+            </div>
             <nav id="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -37,7 +40,6 @@
                     <h2>I'm Arjun</h2>
                     <p class="subtitle">Software Engineer | AI Enthusiast | Full Stack Developer</p>
                     <a href="Resume.pdf" class="button" download>Download My Resume</a>
-                    <img src="images/IMG_5554.jpeg" alt="Arjun" class="profile-image">
                 </div>
             </div>
         </div>
