Update homepage with animated hero section and floating shapes

--- a/index.html
+++ b/index.html
@@ -15,33 +15,28 @@
 </head>
 <body>
     <header id="header">
-        <div class="container">
-            <div style="display: flex; align-items: center;">
-                <h1><a href="#home">Arjun</a></h1>
-                <img src="images/IMG_5554.jpeg" alt="Arjun" class="profile-image">
-            </div>
-            <nav id="nav">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="#certificates">Certificates</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="logo">
+            <a href="#home">Arjun</a>
         </div>
+        <nav id="nav">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#certificates">Certificates</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <div class="content-section" id="home">
-            <div class="container">
-                <div class="profile-container">
-                    <h2>I'm Arjun</h2>
-                    <p class="subtitle">Software Engineer | AI Enthusiast | Full Stack Developer</p>
-                    <a href="Resume.pdf" class="button" download>Download My Resume</a>
-                </div>
+        <div class="hero-section" id="home">
+            <div class="profile-circle">
+                <img src="images/IMG_5554.jpeg" alt="Arjun" class="profile-image">
             </div>
+            <h1 class="hero-title">I'm Arjun</h1>
+            <p class="hero-subtitle">Software Engineer | Graduate Student | AI Enthusiast</p>
         </div>
 
         <div class="content-section" id="about">
