Add: mobile responsive design with dedicated CSS file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ui-neon.css">
     <link rel="stylesheet" href="css/floating-coder-bg.css">
+    <link rel="stylesheet" href="css/mobile.css">
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
