Add: random profile image selection on page load

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <div class="hero-section" id="home">
             <div class="profile-circle">
-                <img src="images/IMG_5554.jpeg" alt="Arjun" class="profile-image">
+                <img alt="Arjun" class="profile-image">
             </div>
             <h1 class="hero-title">I'm Arjun</h1>
             <p class="hero-subtitle">Aspiring Cloud & AI Engineer | IT Support | Automation Enthusiast</p>
@@ -141,5 +141,6 @@
     <script src="js/floating-coder-bg.js"></script>
     <script src="js/ui-neon-bg.js"></script>
     <script src="js/parallax.js"></script>
+    <script src="js/random-image.js"></script>
 </body>
 </html>
